--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
       - name: Release Gem
         uses: cadwallion/publish-rubygems-action@b8b21c36ec884b3ad47707724b30e54330bca267
         env:
