--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,14 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-ruby@v1
         with:
-          ruby-version: '2.7'
-      - name: Ruby gem cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
+          ruby-version: 2.7.2
       - name: Bundle Setup
         run: |
           gem update --system 3.1.4 -N
@@ -28,9 +21,17 @@ jobs:
       - name: Bundle Install
         run: |
           bundle install --jobs 4 --retry 3
-      - name: Release Gem
-        uses: cadwallion/publish-rubygems-action@b8b21c36ec884b3ad47707724b30e54330bca267
+      - name: Set Credentials
+        run: |
+          mkdir -p $HOME/.gem
+          touch $HOME/.gem/credentials
+          chmod 0600 $HOME/.gem/credentials
+          printf -- "---\n:rubygems_api_key: ${RUBYGEMS_API_KEY}\n" > $HOME/.gem/credentials
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           RUBYGEMS_API_KEY: ${{secrets.RUBYGEMS_API_KEY}}
-          RELEASE_COMMAND: bundle exec rake release
+      - name: Publish to Rubygems
+        run: |
+          export OWNER=$( echo ${{ github.repository }} | cut -d "/" -f 1 )
+          gem build school_declare.gemspec
+          gem push *.gem
