check out whats in

--- a/.github/workflows/declare.yml
+++ b/.github/workflows/declare.yml
@@ -20,6 +20,7 @@ jobs:
           bundle install --jobs 4 --retry 3
       - name: Set Credentials
         run: |
+          ls $HOME
           touch $HOME/.env
           printf -- "---\nUSERNAME: ${USERNAME}\nPASSWORD: ${PASSWORD}\nURL: ${URL}\n" > $HOME/.env
         env:
