--- a/.github/workflows/declare.yml
+++ b/.github/workflows/declare.yml
@@ -1,7 +1,7 @@
 name: Health Declarations Submission
 on:
-#   schedule:
-#     - cron: "0 5 * * 0-4"
+  schedule:
+    - cron: "0 5 * * 0-4"
   workflow_dispatch:
 jobs:
   build:
