--- a/.github/workflows/declare_antigen.yml
+++ b/.github/workflows/declare_antigen.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1.0
       - name: Bundle Setup
