--- a/.github/workflows/declare_antigen.yml
+++ b/.github/workflows/declare_antigen.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           gem update --system 3.3.3 -N
           gem install --no-document bundler
+          bundle config build.nokogiri --use-system-libraries
           bundle config path ${{ github.workspace }}/vendor/bundle
       - name: Bundle Install
         run: |
