--- a/.github/workflows/declare_antigen.yml
+++ b/.github/workflows/declare_antigen.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           brew install libxml2 libxslt
           bundle config build.nokogiri --use-system-libraries
+          gem install nokogiri -- --with-xslt-dir=/home/linuxbrew/.linuxbrew/opt/libxslt
           bundle install --jobs 4 --retry 3
       - name: Set Credentials
         run: |
