--- a/.github/workflows/declare.yml
+++ b/.github/workflows/declare.yml
@@ -6,19 +6,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.1.0
+          ruby-version: '3.0'
       - name: Bundle Setup
         run: |
-          gem update --system 3.1.4 -N
+          gem update --system 3.3.3 -N
           gem install --no-document bundler
           bundle config path ${{ github.workspace }}/vendor/bundle
       - name: Bundle Install
         run: |
+          brew install libxml2 libxslt
+          gem install nokogiri -- --with-xslt-dir=/home/linuxbrew/.linuxbrew/opt/libxslt
+          gem install pkg-config -v "~> 1.1"
           bundle install --jobs 4 --retry 3
       - name: Set Credentials
         run: |
